--- a/src/style.css
+++ b/src/style.css
@@ -58,7 +58,7 @@ body {
   margin: 1.5rem;
   height: 9rem;
   width: auto;
-  border-radius: 60%;
+  border-radius: 50%;
 }
 .header-nav-list {
   list-style: none;
@@ -66,12 +66,13 @@ body {
   gap: 4rem;
   background-color: var(--color-black-main);
 }
-@media screen and(max-width:850px) {
+@media screen and (max-width: 850px) {
   .header-nav-list {
-    gap: 2rem;
+    gap: 1rem;
   }
 }
-@media screen and(max-width:750px) {
+
+@media screen and (max-width: 750px) {
   .header-nav-list {
     flex-direction: column;
   }
@@ -152,13 +153,17 @@ body {
   color: var(--color-black-lighter);
   margin-top: 3rem;
   text-transform: capitalize;
-  transition: 0.3secs;
+  
+}
+.info a:hover {
+  background-color: rgba(255, 0, 0, 0.534);
+  transition: 0.4sec ease;
 }
 .container img {
   position: absolute;
-  top: 1rem;
-  left: 1rem;
-  right: 30rem;
+  top: 0;
+
+  right: 20rem;
   z-index: 1;
   display: inline-block;
   margin: 1.5rem;
@@ -167,45 +172,13 @@ body {
   border-radius: 60%;
   align-items: center;
   justify-content: center;
+  
 }
 .info a :hover {
   background-color: rgba(255, 0, 0, 0.534);
   transition: 0.4sec ease;
 }
-/* .available-rooms-card{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap:2rem; 
-  
-}
-.available-room{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between; 
-  gap:3rem;
-  border: 2px solid red;
-  width: 20rem;
-  height: 40rem;
-} */
 
-/*.available-rooms-card {
-  display: flex;
-  width: 30rem;
-  margin: auto;
-  justify-content: space-between;
-  gap: 2rem;
-  padding: 2rem;
-}
-
-.available-room {
-  background-color: var(--color-black-lighter);
-  border-radius: 0.8rem;
-  flex: 1;
-  min-width: 20rem;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-  cursor: pointer;
-}  */
 .available-rooms-card {
   display: flex;
   gap: 2rem;
@@ -511,4 +484,12 @@ body {
   .contact-container .contactinfo {
     width: 100%;
   }
+}
+.footer {
+  border: 2px solid var(--color-grey-lighter);
+  border-radius: 7px;
+
+  padding-block: 4rem;
+  text-align: center;
+  background-color: var(--color-grey-lighter);
 }
