--- a/src/style.css
+++ b/src/style.css
@@ -365,7 +365,16 @@ body {
     url(/images/background.jpg) no-repeat center/ cover;
   padding: 5rem 10rem;
 }
-
+@media (max-width: 768px) {
+  .contact-container {
+    flex-direction: column;
+    gap: 2rem;
+  }
+  .contactForm,
+  .contactinfo {
+    width: 100%;
+  }
+}
 .contact .contact-heading {
   max-width: 80rem;
   text-align: center;
@@ -493,3 +502,96 @@ body {
   text-align: center;
   background-color: var(--color-grey-lighter);
 }
+
+@media screen and (max-width: 768px) {
+  .logo {
+    height: 6rem;
+    margin: 1rem;
+  }
+
+  .header-nav-list {
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem 0;
+  }
+
+  .container {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .info p {
+    max-width: 100%;
+    padding: 0 2rem;
+  }
+
+  .container img {
+    position: static;
+    margin-top: 2rem;
+    height: 20rem;
+  }
+
+  .available-room img {
+    width: 100%;
+    height: auto;
+  }
+
+  .available-room-details {
+    width: 100%;
+  }
+
+  .Available-properties {
+    padding: 5rem 2rem;
+  }
+
+  .tittle {
+    flex-direction: column;
+    font-size: 3rem;
+    gap: 1rem;
+  }
+
+  .card-amenities {
+    width: 100%;
+  }
+
+  .contact-container {
+    flex-direction: column;
+    padding: 2rem;
+  }
+
+  .contact-container .contactinfo,
+  .contactForm {
+    width: 100%;
+    padding: 2rem;
+  }
+}
+
+
+@media screen and (max-width: 500px) {
+  html {
+    font-size: 55%;
+  }
+
+  .info h1 {
+    font-size: 3.5rem;
+  }
+
+  .info h2 {
+    font-size: 2.5rem;
+  }
+
+  .available-room-details h3 {
+    font-size: 2.5rem;
+  }
+
+  .contactForm h2 {
+    font-size: 3rem;
+  }
+
+  .available-title h1,
+  .tittle,
+  .card-amenities h2 {
+    font-size: 2.5rem;
+  }
+}
+
